--- a/GetStartedApp/Views/MainWindow.axaml
+++ b/GetStartedApp/Views/MainWindow.axaml
@@ -14,11 +14,12 @@
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-    
-    <StackPanel>
-        <TextBlock Name="GreetingText" Text="{Binding Greeting}" HorizontalAlignment="Center" Margin="0,10"/>
-        <TextBox Name="NameText" Text="{Binding Name}" Width="200" Margin="0,0,0,10"/>
-        <Button Command="{Binding ButtonClickedCommand}" HorizontalAlignment="Center">Add Item</Button>
-        <ListBox ItemsSource="{Binding Lines}" Width="300"/>
-    </StackPanel>
+
+  <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+    <TextBlock Text="TimeWise" HorizontalAlignment="Center" FontSize="40" FontWeight="Bold" Foreground="Black" Margin="0,0,0,16"/>
+    <TextBox Watermark="Username" Text="{Binding Username, Mode=TwoWay}" Width="200" Margin="0,0,0,10"/>
+    <TextBox Watermark="Password" Text="{Binding Password, Mode=TwoWay}" PasswordChar="*" Width="200" Margin="0,0,0,10" />
+    <Button Command="{Binding ButtonClickedCommand}" HorizontalAlignment="Center">Login</Button>
+    <ListBox ItemsSource="{Binding Lines}" Width="300"/>
+  </StackPanel>
 </Window>
