--- a/GetStartedApp/Views/MainWindow.axaml
+++ b/GetStartedApp/Views/MainWindow.axaml
@@ -19,7 +19,7 @@
     <TextBlock Text="TimeWise" HorizontalAlignment="Center" FontSize="40" FontWeight="Bold" Margin="0,0,0,16"/>
     <TextBox Watermark="Username" Text="{Binding Username, Mode=TwoWay}" Width="200" Margin="0,0,0,10"/>
     <TextBox Watermark="Password" Text="{Binding Password, Mode=TwoWay}" PasswordChar="*" Width="200" Margin="0,0,0,10" />
-    <Button Command="{Binding ButtonClickedCommand}" HorizontalAlignment="Center">Login</Button>
+    <Button Command="{Binding LoginButtonClickedCommand}" HorizontalAlignment="Center">Login</Button>
     <ListBox ItemsSource="{Binding Lines}" Width="300"/>
   </StackPanel>
 </Window>
