Allow to return to login from new user view

--- a/GetStartedApp/Views/NewUser.axaml
+++ b/GetStartedApp/Views/NewUser.axaml
@@ -34,6 +34,7 @@
 
         <Button Content="Register" Width="100" Command="{Binding RegisterUserCommand}" HorizontalAlignment="Center"
                 HorizontalContentAlignment="Center" />
+        <Button Content="Log out" Click="OnBackToLoginButtonClick" HorizontalAlignment="Center"/>
     </StackPanel>
 
 </UserControl>
