Allow to return to login from second view

--- a/GetStartedApp/Views/Second.axaml
+++ b/GetStartedApp/Views/Second.axaml
@@ -16,5 +16,6 @@
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock Text="{Binding Username}" />
         <TextBlock Text="{Binding Password}" />
+        <Button Content="Log out" Click="OnBackToLoginButtonClick" HorizontalAlignment="Center" />
     </StackPanel>
 </UserControl>
