--- a/GetStartedApp/Views/MainWindow.axaml
+++ b/GetStartedApp/Views/MainWindow.axaml
@@ -3,17 +3,22 @@
         xmlns:vm="using:GetStartedApp.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        xmlns:model="using:GetStartedApp.Models"
+        mc:Ignorable="d"
         x:Class="GetStartedApp.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="GetStartedApp">
+        Title="GetStartedApp"
+        Width="1200"
+        Height="800"
+        Background="#F9F9F9">
 
     <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel />
+        <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TransitioningContentControl Content="{Binding CurrentPage}" />
+    <!-- Smooth content replacement (without unsupported property) -->
+    <TransitioningContentControl Content="{Binding CurrentPage}"
+                                 HorizontalAlignment="Stretch"
+                                 VerticalAlignment="Stretch"/>
 </Window>
