--- a/GetStartedApp/Views/TasksView.axaml
+++ b/GetStartedApp/Views/TasksView.axaml
@@ -43,6 +43,7 @@
                         Background="Transparent"
                         Foreground="#EF4444"
                         HorizontalAlignment="Left"
+                        Command="{Binding Main.LogOutCommand}"
                         Margin="0,40,0,0"/>
             </StackPanel>
         </Border>
