--- a/GetStartedApp/Views/Second.axaml
+++ b/GetStartedApp/Views/Second.axaml
@@ -46,6 +46,7 @@
                 Background="Transparent"
                 Foreground="#EF4444"
                 HorizontalAlignment="Left"
+                Command="{Binding Main.LogOutCommand}"
                 Margin="0,40,0,0"/>
       </StackPanel>
     </Border>
